<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave"
    android:paddingTop="34dp"
    android:orientation="vertical"
    tools:context=".anotherapp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12sp"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginBottom="12dp"
        android:text="@string/judul" />

    <EditText
        android:id="@+id/kolom1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:hint="@string/angka1"
        android:inputType="numberDecimal"
        android:autofillHints=""
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/kolom2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/angka2"
        android:inputType="numberDecimal"
        android:autofillHints=""
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btnshape"
        android:text="@string/hitung"
        app:backgroundTint="@color/teal_700" />

    <TextView
        android:id="@+id/tvhasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/hasil"
        android:textColor="@color/white" />

</LinearLayout>